--- a/notebooks/jinja.ipynb
+++ b/notebooks/jinja.ipynb
@@ -83,7 +83,7 @@
       {
        "html": [
         "<table>\n",
-        "<tr><th> Location </td>   <th> Price<th></tr>\n",
+        "<tr><th> Location </th>   <th> Price</th></tr>\n",
         "<tr><td> Grandstand Left </td> <td> 50 .00 </td> </tr>\n",
         "<tr><td> Grandstand Right </td> <td> 60 .00 </td> </tr>\n",
         "<tr><td> Grandstand Right </td> <td> 20 .00 </td> </tr>\n",
@@ -92,11 +92,11 @@
        ],
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x3478110>"
+        "<IPython.core.display.HTML at 0x3755390>"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 35
     },
     {
      "cell_type": "markdown",
@@ -293,6 +293,20 @@
       }
      ],
      "prompt_number": 33
+    },
+    {
+     "cell_type": "markdown",
+     "source": [
+      "So the project for this tutorial is to put things together. You should make a website with the following parts. \n",
+      "\n",
+      "1) It should have a jinja template that makes a table. First pass you should have the table just be a list of data you hardcode in the .py file. \n",
+      "\n",
+      "2) Next you should hook that same template up to a database. Have the server return a page where the table is filled in based on something from the data base itself.\n",
+      "\n",
+      "3) Finally, try to make the page a bit prettier. You can play around with the html file and add css to make it look less like the ugly default style. \n",
+      "\n",
+      "And please don't hesitate to ask questions if you run into issues. "
+     ]
     }
    ]
   }
